--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,8 +242,7 @@ a:hover {
 }
 
 .aboutTextBanners {
-/*   writing-mode: vertical-rl;
- */  text-orientation: sideways;
+  text-orientation: sideways;
   word-wrap: break-word;
   text-align:justify;
   position:absolute;
@@ -323,4 +322,10 @@ a:hover {
 #aboutCol:hover #pageOverlay {
   opacity: 1;
   transform: rotate(382deg);
+}
+
+/*culture fit*/
+#arrows {
+  width:100%;
+  height:100%
 }
