--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -383,14 +383,55 @@ a:hover {
   height:auto;
 }
 
-#favoriteBands {
-  font-size:35px;
-  font-weight:bold;
-  letter-spacing: 5px;
+#recordPlayer {
   position:absolute;
-  top:40px;
-  left:10%;
-  z-index:200;
+  top:0;
+  width:auto;
+  height:100vh;
+  background-color:black
+}
+
+.recordBtn {
+  background-color:black;
+  color:white;
+  box-shadow: 4px 4px darkgrey;
+  text-align:right;
+}
+
+.recordBtn:hover {
+  box-shadow:1px 1px grey;
+}
+
+#recordBtnOne {
+  position:absolute;
+  top:35%;
+  right:15%;
+}
+
+#recordBtnTwo {
+  position:absolute;
+  top:50%;
+  right:15%;
+}
+
+#recordBtnThree {
+  position:absolute;
+  top:65%;
+  right:15%;
+}
+
+#recordBtnFour {
+  position:absolute;
+  top:80%;
+  right:15%;
+}
+
+#recordPauseBtn {
+  position:absolute;
+  top:90%;
+  right:50%;
+  background-color:black;
+  color:white;
 }
 
 #secretPoemDiv {
