--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,52 @@ a:hover {
   text-align:right;
   z-index: 100;
   outline: none;
+  animation: shake 2s ease-in-out infinite;
+  animation-delay: 8s;
+  animation-iteration-count: 3;
+}
+@keyframes shake {
+    0%   {
+      -ms-transform: rotate(90deg);
+      -webkit-transform: rotate(90deg);
+      transform: rotate(90deg);  
+  }
+    10%  {
+      -ms-transform: rotate(100deg);
+      -webkit-transform: rotate(100deg);
+      transform: rotate(100deg);
+      }
+    20%  {
+      -ms-transform: rotate(80deg);
+      -webkit-transform: rotate(80deg);
+      transform: rotate(80deg);
+  }
+  30%  {
+      -ms-transform: rotate(100deg);
+      -webkit-transform: rotate(100deg);
+      transform: rotate(100deg);
+      }
+    40%  {
+      -ms-transform: rotate(80deg);
+      -webkit-transform: rotate(80deg);
+      transform: rotate(80deg);
+  }
+  50%  {
+      -ms-transform: rotate(100deg);
+      -webkit-transform: rotate(100deg);
+      transform: rotate(100deg);
+      }
+    60%  {
+      -ms-transform: rotate(80deg);
+      -webkit-transform: rotate(80deg);
+      transform: rotate(80deg);
+  }
+
+    70% {
+      -ms-transform: rotate(90deg);
+      -webkit-transform: rotate(90deg);
+      transform: rotate(90deg);  
+  }
 }
 
 #bunTopper {
@@ -125,13 +171,13 @@ a:hover {
 
 .navSpan:before {
   left: -2.5px;
-  transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
+  transition: width 1.1s cubic-bezier(0.22, 0.61, 0.36, 1);
 }
 
 .navSpan:after {
   right: 2.5px;
   background: #fff;
-  transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
+  transition: width 1.1s cubic-bezier(0.22, 0.61, 0.36, 1);
 }
 
 .navSpan:hover:before {
@@ -532,17 +578,36 @@ a:hover {
   left:20%
 }
 
+#ginsbergDiv {
+  font-family: 'Raleway', sans-serif;
+  line-height: 15px;
+  position:absolute;
+  top:20%;
+  left:5%;
+}
+
+#leaveGinsbergBtn {
+  position: absolute;
+  top:80%;
+  right:20% !important;
+}
 #leaveBooksBtn{
   position:absolute;
   top:120%;
   right:-20%;
 }
 
-#leavePoemBtn{
+.leavePoemBtn{
   height:30px;
   position:absolute;
   top:80%;
   right:-120%;
 }
 
+#trailSearcher {
+  position: absolute;
+  top:5%;
+  left:15%;
+  border-bottom:black 10px;
+}
 
