--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ a:hover {
   z-index: 100;
   outline: none;
   animation: shake 2s ease-in-out infinite;
-  animation-delay: 8s;
+  animation-delay: 6.5s;
   animation-iteration-count: 3;
 }
 @keyframes shake {
@@ -244,9 +244,9 @@ a:hover {
   right:22vw;
   background-color: white;
   color: black;
-  animation: spin 8s ease-in-out infinite;
+  animation: lift 5.5s ease-in-out infinite;
 }
-@keyframes spin {
+@keyframes lift {
   2% {transform:rotate(20deg)}
   3% {transform:rotate(-20deg)}
   4% {transform:rotate(0deg)}
@@ -343,7 +343,7 @@ a:hover {
 
 #resumeRowThree {
   width: 102vw;
-  height:102vh;
+  height:100vh;
   background-color:black;
   color:black;
   position:absolute;
@@ -372,15 +372,17 @@ a:hover {
   font-weight:bold;
   margin-bottom:60px;
   letter-spacing: 8px;
+  z-index:1000;
 }
 
 #brainImg {
   width:160px;
   height:auto;
-  transform:rotate(22deg);
+  transform:rotate(16deg);
   position:absolute;
-  right:15px;
-  top:5px;
+  right:65px;
+  top:12px;
+  z-index:0;
 }
 
 .companyWrapper {
@@ -403,6 +405,27 @@ a:hover {
   color:black;
   margin-bottom:15px;
   font-weight: bold;
+}
+
+#resumeRowFour {
+  width: 102vw;
+  height:auto;
+  background-color:black;
+  color:black;
+  position:absolute;
+  top:300vh;
+  left:0;
+  right:0;
+  text-align:center;
+  border:solid black 10px;
+}
+
+#rowFourContainer {
+  background-image: url("../images/bulb.gif");
+  background-repeat: no-repeat;
+  background-position-x: -15%;
+  background-size: 60%;
+
 }
 
 /*games and apps*/
