--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -469,6 +469,48 @@ a:hover {
   margin-right:15%;
   float:right;
 }
+/*web projects*/
+.webProjImg {
+  width:250px;
+  height:auto;
+  margin:50px;
+}
+
+.webOverlay {
+  position: fixed;
+  bottom: 5%;
+  left: 80%;
+  right: 0;
+  height: 300px;
+  width: 150px;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: black;
+}
+
+#bernarooLink:hover .webOverlay {
+  opacity: 1;
+  transform: rotate(360deg);
+}
+
+#bootstrapPortLink:hover .webOverlay {
+  opacity: 1;
+  transform: rotate(360deg);
+}
+
+#responsivePortLink:hover .webOverlay {
+  opacity: 1;
+  transform: rotate(360deg);
+}
+
+#webAdvert {
+  text-align:center;
+  margin:auto;
+  background-color:black;
+  color:white;
+  opacity:.8;
+  padding:7px;
+}
 
 /*games and apps*/
 #schoolProjects {
@@ -477,10 +519,11 @@ a:hover {
   width:100%;
 }
 
-#schoolProjText {
+.projText {
   font-size: 50px;
-  letter-spacing: 35px;
-  padding-bottom:70px;
+  letter-spacing: 20px;
+  padding-bottom:35px;
+  padding-top:35px;
   font-weight: bold;
 }
 
