--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,12 @@ a:hover {
   color:darkgray;
 }
 
+@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css");
+  
+.the-icons {
+  font-size: 25px;
+}
+
 /*load screen*/
 #surpriseDiv {
   width: 40%;
@@ -159,7 +165,8 @@ a:hover {
   cursor: pointer;
 }
 
-.navSpan:before, .navSpan:after {
+
+.navSpan:before {
   content: '';
   position: absolute;
   width: 0%;
@@ -167,14 +174,18 @@ a:hover {
   top: 50%;
   margin-top: -0.5px;
   background: #fff;
-}
-
-.navSpan:before {
   left: -2.5px;
   transition: width 1.1s cubic-bezier(0.22, 0.61, 0.36, 1);
 }
 
 .navSpan:after {
+  content: '';
+  position: absolute;
+  width: 0%;
+  height: 1px;
+  top: 50%;
+  margin-top: -0.5px;
+  background: #fff;
   right: 2.5px;
   background: #fff;
   transition: width 1.1s cubic-bezier(0.22, 0.61, 0.36, 1);
@@ -183,6 +194,7 @@ a:hover {
 .navSpan:hover:before {
   background: white;
   width: 60%;
+  transition: width 1.1s cubic-bezier(0.22, 0.61, 0.36, 1);
 }
 
 .navSpan:hover:after {
@@ -190,7 +202,7 @@ a:hover {
   width: 60%;
   margin-bottom:20px;
   height:20px;
-  transition: 0s;
+  transition: 1s;
 }
 
 /*resume*/
@@ -244,12 +256,9 @@ a:hover {
   right:22vw;
   background-color: white;
   color: black;
-  animation: lift 5.5s ease-in-out infinite;
+  animation: lift 5.0s ease-in-out infinite;
 }
 @keyframes lift {
-  2% {transform:rotate(20deg)}
-  3% {transform:rotate(-20deg)}
-  4% {transform:rotate(0deg)}
   6%   {bottom:0px;}
   8%  {bottom:5px;}
   10%  {bottom:10px;}
@@ -301,6 +310,10 @@ a:hover {
   z-index:10;
 }
 
+.ability-score {
+  position:absolute;
+  left:18vw;
+}
 #resumeRowTwo img {
   position:absolute;
   left:0;
@@ -468,14 +481,118 @@ a:hover {
   width:60%;
   margin-right:15%;
   float:right;
+  cursor: pointer;
 }
 /*web projects*/
-.webProjImg {
-  width:250px;
-  height:auto;
-  margin:50px;
+.webImgContainer {
+  margin-right:5vw;
+  margin-left:5vw;
 }
 
+.webRow {
+  overflow-x:scroll;
+  height:300px !important;
+}
+
+.circle
+{
+  position:relative;
+  width:250px;
+  height:250px;
+  -webkit-border-radius:50%;
+    border-radius:50%;
+   -moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+  padding:10px;
+
+  
+  /* Assign the perspective to enable 3d Transform */
+  	perspective :500px;
+	-webkit-perspective: 500px;
+    -moz-perspective: 500px;
+  
+}
+
+.front img{
+  border-radius:50%;
+   -moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+}
+
+.front
+{
+  position:absolute;
+  z-index:1000;  
+  transform: rotateX(0deg) rotateY(0deg);
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+  /* Assign The 3D Transform */
+ -webkit-transform: rotateX(0deg) rotateY(0deg);
+    -webkit-transform-style: preserve-3d;
+    -webkit-backface-visibility: hidden;
+    -moz-transform: rotateX(0deg) rotateY(0deg);
+    -moz-transform-style: preserve-3d;
+    -moz-backface-visibility: hidden;
+    
+  /* Transition Effect */
+  transition: all .2s ease-in-out;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+}
+/* .flipping class for flip effect using jquery */
+
+.flipping .front
+{
+  z-index:9;
+  transform: rotateX(180deg);
+  -webkit-transform:rotateX(180deg);
+  -moz-transform:rotateX(180deg);
+}
+
+
+.back
+{
+  position:absolute;
+  width:250px;
+  height:250px;
+  background:#929292;
+  overflow:hidden;
+  cursor: pointer;
+  text-align:center;
+  z-index:8;
+  /* Create Circle With 50% Rounded */
+  border-radius:50%;
+  -webkit-border-radius:50%;
+   -moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+  transform:rotateX(-180deg);
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+  /* Assign The 3D Transform */
+    -webkit-transform:rotateX(-180deg);
+    -webkit-transform-style: preserve-3d;
+    -webkit-backface-visibility: hidden;
+    -moz-transform:rotateX(-180deg);
+    -moz-transform-style: preserve-3d;
+    -moz-backface-visibility: hidden;
+  
+  /* Transition Effect */
+  transition:all .2s ease-in-out;
+  -webkit-transition:all .2s ease-in-out;
+  -moz-transition:all .2s ease-in-out;
+  -o-transition:all .2s ease-in-out;
+}
+
+.flipping .back
+{
+  z-index:10;
+  transform: rotateX(0deg) rotateY(0deg);
+  -webkit-transform: rotateX(0deg) rotateY(0deg);
+	-moz-transform:rotateX(0deg) rotateY(0deg);
+}
+
+/*
 .webOverlay {
   position: fixed;
   bottom: 5%;
@@ -501,7 +618,7 @@ a:hover {
 #responsivePortLink:hover .webOverlay {
   opacity: 1;
   transform: rotate(360deg);
-}
+} */
 
 /* #webAdvert {
   text-align:center;
@@ -521,8 +638,7 @@ a:hover {
 
 .projText {
   font-size: 50px;
-  letter-spacing: 20px;
-  padding-bottom:35px;
+  padding-bottom:10px;
   padding-top:35px;
   font-weight: bold;
 }
@@ -598,7 +714,7 @@ a:hover {
   transform: rotate(-360deg);
 }
 
-/*Design Page*/
+/*
 #designRowOne {
   margin-top:10%;
 }
@@ -665,7 +781,6 @@ a:hover {
   opacity: 1;
 }
 
-/* Art Page*/
 #artBackground {
   height:100vh;
   width:auto;
@@ -718,20 +833,22 @@ a:hover {
 .img-fluid {
   margin:auto;
 }
-
+ */
 /* About page */
 .aboutRow {
   width:80%;
+  height:85%;
   position:fixed;
-  top:0;
+  top:7.5%;
   bottom:0;
   left:0;
-  transform:rotate(-22deg);
+  transform:rotate(-17deg);
 }
 
 .aboutBanners {
   background:black;
   color:white;
+  cursor: pointer;
 }
 
 .aboutBtwnBanners {
@@ -754,7 +871,7 @@ a:hover {
   position:absolute;
   top:35%;
 }
-.aboutOverlay {
+/* .aboutOverlay {
   opacity: 0;
   transition: .5s ease;
   background-color: black;
@@ -769,57 +886,58 @@ a:hover {
 
 #linkedOverlay {
   position: absolute;
-  top:108%;
+  top:70vh; 
+  left:-25%;
 }
 
 #linkedCol:hover #linkedOverlay {
   opacity: 1;
-  transform: rotate(382deg);
+  transform: rotate(377deg);
 }
 
 #emailOverlay {
   position:absolute;
-  top:102%;
-  right: -65%;
-}
+  top:70vh; 
+/*   right: -20%;
+  }
 
 #emailCol:hover #emailOverlay {
   opacity: 1;
-  transform: rotate(382deg);
+  transform: rotate(377deg);
 }
 
 #gitOverlay {
-  position:absolute;
-  top:108%;
-  left: 400%;
-}
+   position:absolute;
+  top:70vh; 
+   left: 400%;
+ }
 
 #gitCol:hover #gitOverlay {
   opacity: 1;
-  transform: rotate(382deg);
+  transform: rotate(377deg);
 }
 
 #cultureOverlay {
   position:absolute;
-  top:102%;
-  left: 150%;
-}
+  top:70vh; 
+   left: 150%;
+ }
 
 #cultureCol:hover #cultureOverlay {
   opacity: 1;
-  transform: rotate(382deg);
+  transform: rotate(377deg);
 }
 
 #pageOverlay {
   position:absolute;
-  top:92%;
-  right:-200px;
-}
+  top:70vh; 
+   right:-200px;
+ }
 
 #aboutCol:hover #pageOverlay {
   opacity: 1;
-  transform: rotate(382deg);
-}
+  transform: rotate(377deg);
+} */
 
 #emailForm {
   position:fixed;
